--- a/public/styles/create-point.css
+++ b/public/styles/create-point.css
@@ -24,7 +24,7 @@
 
 #page-create-point header a span {
   margin-right: 16px;
-  background-image: url('../icones/arrow-left.svg');
+  background-image: url('../assets/arrow-left.svg');
 
   display: flex;
 
@@ -57,10 +57,20 @@ form fieldset {
 
 form legend {
   margin-bottom: 40px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  width: 100%;
 }
 
 form legend h2 {
   font-size: 24px;
+}
+
+form legend span {
+  color: var(--title-color);
 }
 
 form .field {
