--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -2,7 +2,7 @@
 #page-home {
   height: 100vh;
   
-  background: url('../icones/home-background.svg') no-repeat;
+  background: url('../assets/home-background.svg') no-repeat;
   background-position: 40vw bottom;
 }
 
@@ -37,7 +37,7 @@
   margin-right: 16px;
   display: flex;
 
-  background-image: url('../icones/log-in.svg');
+  background-image: url('../assets/log-in.svg');
 
   width: 20px;
   height: 20px;
@@ -103,7 +103,7 @@
 
 #page-home main a span::after {
   content: '';
-  background-image: url('../icones/search.svg');
+  background-image: url('../assets/search.svg');
 
   width: 20px;
   height: 20px;
