Correção de erros de ortografia

--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -73,7 +73,7 @@
 
     <fieldset>
       <legend>
-        <h2>Items de coleta</h2>
+        <h2>Itens de coleta</h2>
         <span>Selecione um ou mais itens abaixo:</span>
       </legend>
 
